@@ -1,3 +1,8 @@
+Release x.x.x
+=============
+
+* [ENH] Reafactor of the Dockerfile to improve transparency, reduce size, and enable injecting code in Singularity (#457)
+
 Release 0.9.2
 =============
 
